--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,12 +1,12 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "app to write, save, and potentially delete notes",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
-  "author": "",
+  "author": "Catherine Smith",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4"
